# cmake-assignment

./: .~lock.CMake test.docx#  CMakeLists.txt  README.md
data/: data.ply
include/: filtering.h  io.h  transformation.h
src/: filtering.cpp  io.cpp  main.cpp  transformation.cpp
